--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_bloc: ^6.1.1
   equatable: ^1.2.5
   dartz: ^0.9.2
-  connectivity: ^2.0.2
+  data_connection_checker: ^0.3.4
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
 
